# qml-debug

./: .gitignore  .npmrc  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
.github/workflows/: ci.yml
docs/: plan.md  requirements.md
scripts/: with-node22.sh
snippets/: qml-debug.code-snippets
src/: debug-adapter.ts  extension.ts  log.ts  packet-manager.ts  packet.ts  qml-messages.ts  qml-types.ts  runtime-views.ts  service-debug-messages.ts  service-declarative-debug-client.ts  service-qml-debugger.ts  service-qml-inspector.ts  service-qml-profiler.ts  service-v8-debugger.ts
src/adapter/: debug-adapter.ts
src/extension/: automation-control.ts  extension.ts  runtime-views.ts
src/protocol/: profiler-features.ts  qml-messages.ts
src/services/: debug-messages.ts  declarative-debug-client.ts  qml-debugger.ts  qml-inspector.ts  qml-profiler.ts  v8-debugger.ts
src/transport/: packet-manager.ts  packet.ts
test/: automation-control.test.ts  bootstrap.ts  debug-adapter.test.ts  launch-fixture.test.ts  packet-manager.test.ts  packet.test.ts  qml-profiler.test.ts  qml-types.test.ts  qt-integration.test.ts  runtime-views.test.ts  service-debug-messages.test.ts  service-lifecycle.test.ts  vscode-mock.ts
test/fixtures/: fake-qml-app  launch.json
test/fixtures/qml/: Main.qml
test/qt-fixture/: CMakeLists.txt  README.md  main.cpp  qml.qrc
test/qt-fixture/qml/: Main.qml  helpers.js
test/qt-fixture/qml/components/: FixtureDelegate.qml  FixturePanel.qml
